--- a/R/dev_rev/00 - Visualização de objetos e variáveis.ipynb
+++ b/R/dev_rev/00 - Visualização de objetos e variáveis.ipynb
@@ -32,7 +32,7 @@
    "id": "1b9f5e96",
    "metadata": {},
    "source": [
-    "### Script 01.1-shapes_municipios_e_setores"
+    "# Script 01.1-shapes_municipios_e_setores"
    ]
   },
   {
@@ -2775,7 +2775,7 @@
    "id": "d518a65c",
    "metadata": {},
    "source": [
-    "### Script 01.2-grade_censo"
+    "# Script 01.2-grade_censo"
    ]
   },
   {
@@ -2821,7 +2821,7 @@
    "id": "d26e0a5b",
    "metadata": {},
    "source": [
-    "### Script 01.3-dados_setores_censitarios"
+    "# Script 01.3-dados_setores_censitarios"
    ]
   },
   {
@@ -4033,7 +4033,7 @@
    "id": "55672ebe",
    "metadata": {},
    "source": [
-    "### Script 01.4-dados_educacao"
+    "# Script 01.4-dados_educacao"
    ]
   },
   {
@@ -6127,7 +6127,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ed21332",
+   "id": "9446782d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Script 03.2-agrupamento_setor_para_grade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2c9ec83",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26ff40a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df280a5a",
+   "metadata": {},
+   "source": [
+    "# Script 03.2-agrupamento_setor_para_grade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dd32b4f",
    "metadata": {},
    "outputs": [],
    "source": []
