scripts saude (1.5, fun) e 3.2 (v2 e v3) revisados

--- a/R/dev_rev/00 - Visualização de objetos e variáveis.ipynb
+++ b/R/dev_rev/00 - Visualização de objetos e variáveis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7b7cfac7",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "a05b36d2",
    "metadata": {},
    "outputs": [
@@ -86,19 +86,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in fun(libname, pkgname):\n",
-      "“rgeos: versions of GEOS runtime 3.9.1-CAPI-1.14.2\n",
-      "and GEOS at installation 3.9.1dev-CAPI-1.14.1differ”\n",
-      "Registered S3 method overwritten by 'geojsonsf':\n",
-      "  method        from   \n",
-      "  print.geojson geojson\n",
-      "\n"
-     ]
     },
     {
      "data": {
@@ -6160,11 +6147,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9dd32b4f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/geo+json": {
+       "features": [
+        {
+         "geometry": {
+          "coordinates": [
+           [
+            [
+             -35.2821,
+             -5.8494
+            ],
+            [
+             -35.2808,
+             -5.8493
+            ],
+            [
+             -35.2808,
+             -5.8488
+            ],
+            [
+             -35.2821,
+             -5.8494
+            ]
+           ]
+          ],
+          "type": "Polygon"
+         },
+         "properties": {
+          "area_grade": 4110.6179,
+          "id_grade": 1,
+          "pop_homens": 1.1255,
+          "pop_mulheres": 1.1255,
+          "pop_total": 2.251
+         },
+         "type": "Feature"
+        },
+        {
+         "geometry": {
+          "coordinates": [
+           [
+            [
+             -35.2808,
+             -5.8487
+            ],
+            [
+             -35.2809,
+             -5.8475
+            ],
+            [
+             -35.2815,
+             -5.8475
+            ],
+            [
+             -35.2826,
+             -5.8482
+            ],
+            [
+             -35.2825,
+             -5.8494
+            ],
+            [
+             -35.2823,
+             -5.8494
+            ],
+            [
+             -35.2808,
+             -5.8487
+            ]
+           ]
+          ],
+          "type": "Polygon"
+         },
+         "properties": {
+          "area_grade": 29420.7361,
+          "id_grade": 1,
+          "pop_homens": 8.0557,
+          "pop_mulheres": 8.0557,
+          "pop_total": 16.1113
+         },
+         "type": "Feature"
+        },
+        {
+         "geometry": {
+          "coordinates": [
+           [
+            [
+             -35.2815,
+             -5.8475
+            ],
+            [
+             -35.2826,
+             -5.8476
+            ],
+            [
+             -35.2826,
+             -5.8482
+            ],
+            [
+             -35.2815,
+             -5.8475
+            ]
+           ]
+          ],
+          "type": "Polygon"
+         },
+         "properties": {
+          "area_grade": 3889.4892,
+          "id_grade": 1,
+          "pop_homens": 1.065,
+          "pop_mulheres": 1.065,
+          "pop_total": 2.13
+         },
+         "type": "Feature"
+        }
+       ],
+       "type": "FeatureCollection"
+      },
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A sf: 3 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>id_grade</th><th scope=col>pop_total</th><th scope=col>pop_homens</th><th scope=col>pop_mulheres</th><th scope=col>area_grade</th><th scope=col>geom</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;POLYGON [°]&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>1</td><td> 2.251045</td><td>1.125523</td><td>1.125523</td><td> 4110.618</td><td>POLYGON ((-35.28209 -5.8493...</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>1</td><td>16.111302</td><td>8.055651</td><td>8.055651</td><td>29420.736</td><td>POLYGON ((-35.28079 -5.8487...</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>1</td><td> 2.129951</td><td>1.064976</td><td>1.064976</td><td> 3889.489</td><td>POLYGON ((-35.28155 -5.8475...</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A sf: 3 × 6\n",
+       "\\begin{tabular}{r|llllll}\n",
+       "  & id\\_grade & pop\\_total & pop\\_homens & pop\\_mulheres & area\\_grade & geom\\\\\n",
+       "  & <int> & <dbl> & <dbl> & <dbl> & <dbl> & <POLYGON {[}°{]}>\\\\\n",
+       "\\hline\n",
+       "\t1 & 1 &  2.251045 & 1.125523 & 1.125523 &  4110.618 & POLYGON ((-35.28209 -5.8493...\\\\\n",
+       "\t2 & 1 & 16.111302 & 8.055651 & 8.055651 & 29420.736 & POLYGON ((-35.28079 -5.8487...\\\\\n",
+       "\t3 & 1 &  2.129951 & 1.064976 & 1.064976 &  3889.489 & POLYGON ((-35.28155 -5.8475...\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A sf: 3 × 6\n",
+       "\n",
+       "| <!--/--> | id_grade &lt;int&gt; | pop_total &lt;dbl&gt; | pop_homens &lt;dbl&gt; | pop_mulheres &lt;dbl&gt; | area_grade &lt;dbl&gt; | geom &lt;POLYGON [°]&gt; |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| 1 | 1 |  2.251045 | 1.125523 | 1.125523 |  4110.618 | POLYGON ((-35.28209 -5.8493... |\n",
+       "| 2 | 1 | 16.111302 | 8.055651 | 8.055651 | 29420.736 | POLYGON ((-35.28079 -5.8487... |\n",
+       "| 3 | 1 |  2.129951 | 1.064976 | 1.064976 |  3889.489 | POLYGON ((-35.28155 -5.8475... |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  id_grade pop_total pop_homens pop_mulheres area_grade\n",
+       "1 1         2.251045 1.125523   1.125523      4110.618 \n",
+       "2 1        16.111302 8.055651   8.055651     29420.736 \n",
+       "3 1         2.129951 1.064976   1.064976      3889.489 \n",
+       "  geom                          \n",
+       "1 POLYGON ((-35.28209 -5.8493...\n",
+       "2 POLYGON ((-35.28079 -5.8487...\n",
+       "3 POLYGON ((-35.28155 -5.8475..."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# O arquivo 'grade_renda_cor_nat_2019' é o resultado desta etapa\n",
+    "open_file <- '../../../indice-mobilidade_dados/XY_grade_municipio_com_renda_cor/2019/grade_renda_cor_nat_2019.rds'\n",
+    "ui_fim <- read_rds(open_file)\n",
+    "head(ui_fim, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f657da46",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error: No method asJSON S3 class: units\n",
+     "output_type": "error",
+     "traceback": [
+      "Error: No method asJSON S3 class: units\nTraceback:\n",
+      "1. msg_to_wire(msg)",
+      "2. charToRaw(toJSON(msg$content, auto_unbox = TRUE))",
+      "3. toJSON(msg$content, auto_unbox = TRUE)",
+      "4. asJSON(x, dataframe = dataframe, Date = Date, POSIXt = POSIXt, \n .     factor = factor, complex = complex, raw = raw, matrix = matrix, \n .     auto_unbox = auto_unbox, digits = digits, na = na, null = null, \n .     force = force, indent = indent, ...)",
+      "5. asJSON(x, dataframe = dataframe, Date = Date, POSIXt = POSIXt, \n .     factor = factor, complex = complex, raw = raw, matrix = matrix, \n .     auto_unbox = auto_unbox, digits = digits, na = na, null = null, \n .     force = force, indent = indent, ...)",
+      "6. .local(x, ...)",
+      "7. vapply(x, asJSON, character(1), na = na, auto_unbox = auto_unbox, \n .     indent = indent + 2L, no_dots = no_dots, ...)",
+      "8. FUN(X[[i]], ...)",
+      "9. FUN(X[[i]], ...)",
+      "10. .local(x, ...)",
+      "11. vapply(x, asJSON, character(1), na = na, auto_unbox = auto_unbox, \n  .     indent = indent + 2L, no_dots = no_dots, ...)",
+      "12. FUN(X[[i]], ...)",
+      "13. FUN(X[[i]], ...)",
+      "14. .local(x, ...)",
+      "15. vapply(x, asJSON, character(1), na = na, auto_unbox = auto_unbox, \n  .     indent = indent + 2L, no_dots = no_dots, ...)",
+      "16. FUN(X[[i]], ...)",
+      "17. FUN(X[[i]], ...)",
+      "18. .local(x, ...)",
+      "19. vapply(x, asJSON, character(1), na = na, auto_unbox = auto_unbox, \n  .     indent = indent + 2L, no_dots = no_dots, ...)",
+      "20. FUN(X[[i]], ...)",
+      "21. FUN(X[[i]], ...)",
+      "22. .local(x, ...)",
+      "23. vapply(x, asJSON, character(1), na = na, auto_unbox = auto_unbox, \n  .     indent = indent + 2L, no_dots = no_dots, ...)",
+      "24. FUN(X[[i]], ...)",
+      "25. FUN(X[[i]], ...)",
+      "26. .local(x, ...)",
+      "27. vapply(x, asJSON, character(1), na = na, auto_unbox = auto_unbox, \n  .     indent = indent + 2L, no_dots = no_dots, ...)",
+      "28. FUN(X[[i]], ...)",
+      "29. FUN(X[[i]], ...)",
+      "30. .local(x, ...)",
+      "31. stop(\"No method asJSON S3 class: \", class(x))",
+      "32. base::stop(..., call. = FALSE)"
+     ]
+    }
+   ],
+   "source": [
+    "# O arquivo 'grade_renda_cor_nat_2019' é o resultado desta etapa\n",
+    "open_file <- '../../../indice-mobilidade_dados/XY_grade_municipio_com_renda_cor/2019/grade_renda_cor_nat_2019.rds'\n",
+    "ui_fim <- read_rds(open_file)\n",
+    "head(ui_fim, 3)"
+   ]
   }
  ],
  "metadata": {
