--- a/R/dev_rev/00 - Visualização de objetos e variáveis.ipynb
+++ b/R/dev_rev/00 - Visualização de objetos e variáveis.ipynb
@@ -6380,6 +6380,143 @@
     "ui_fim <- read_rds(open_file)\n",
     "head(ui_fim, 3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2af0ddcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>457</li><li>21</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 457\n",
+       "\\item 21\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 457\n",
+       "2. 21\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 457  21"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 6 × 21</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>code_cras</th><th scope=col>code_muni</th><th scope=col>name_suas</th><th scope=col>tp_log</th><th scope=col>logradouro</th><th scope=col>numero</th><th scope=col>bairro</th><th scope=col>cep</th><th scope=col>code_uf</th><th scope=col>email</th><th scope=col>telefone</th><th scope=col>open_date</th><th scope=col>lat_suas</th><th scope=col>lon_suas</th><th scope=col>cad_unico</th><th scope=col>name_muni</th><th scope=col>abrev_estado</th><th scope=col>endereco</th><th scope=col>lon</th><th scope=col>lat</th><th scope=col>check</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>13026002569</td><td>1302603</td><td>CRAS CIDADE NOVA       </td><td>Avenida</td><td>C, QD 67        </td><td>46  </td><td>CIDADE NOVA       </td><td>69097748</td><td>13</td><td>cras.cidadenova@pmm.am.gov.br       </td><td>9236363849</td><td>01/06/2004</td><td>-3.013.061.766.867.960 </td><td>-59.970.860.481.054.100</td><td>Sim</td><td>Manaus</td><td>AM</td><td>AVENIDA C, QD 67, 46       </td><td>-59.97086</td><td>-3.013062</td><td>1</td></tr>\n",
+       "\t<tr><td>13026002579</td><td>1302603</td><td>CRAS ALFREDO NASCIMENTO</td><td>Rua    </td><td>8               </td><td>13  </td><td>ALFREDO NASCIMENTO</td><td>69099435</td><td>13</td><td>cras.alfredonascimento@pmm.am.gov.br</td><td>9236464857</td><td>01/03/2007</td><td>-3.014.891.255.781.800 </td><td>-5.995.288.610.458.370 </td><td>Sim</td><td>Manaus</td><td>AM</td><td>RUA 8, 13                  </td><td>-59.95289</td><td>-3.014891</td><td>1</td></tr>\n",
+       "\t<tr><td>13026002583</td><td>1302603</td><td>CRAS BETÂNIA           </td><td>Rua    </td><td>Sao Lazaro      </td><td>26  </td><td>BETÂNIA           </td><td>69073091</td><td>13</td><td>cras.betania@pmm.am.gov.br          </td><td>9232377678</td><td>01/09/2005</td><td>-31.327.172.123.425.700</td><td>-59.995.458.126.068.100</td><td>Sim</td><td>Manaus</td><td>AM</td><td>RUA SAO LAZARO, 26         </td><td>-59.99546</td><td>-3.132717</td><td>1</td></tr>\n",
+       "\t<tr><td>13026002585</td><td>1302603</td><td>CRAS Compensa I        </td><td>Rua    </td><td>Rua da industria</td><td>20  </td><td>COMPENSA 1        </td><td>69030070</td><td>13</td><td>cras.compensa1@pmm.am.gov.br        </td><td>9236714767</td><td>01/09/2005</td><td>-31.030.530.413.866.400</td><td>-6.005.062.580.108.640 </td><td>Sim</td><td>Manaus</td><td>AM</td><td>RUA DA INDUSTRIA, 20       </td><td>-60.05063</td><td>-3.103053</td><td>1</td></tr>\n",
+       "\t<tr><td>13026002589</td><td>1302603</td><td>CRAS CACHOEIRINHA      </td><td>Avenida</td><td>CARVALHO LEAL   </td><td>1151</td><td>CACHOEIRINHA      </td><td>69065001</td><td>13</td><td>cras.cachoeirinha@pmm.am.gov.br     </td><td>9236318607</td><td>27/03/2007</td><td>-3.125.645.770.996.360 </td><td>-6.000.636.935.235.090 </td><td>Sim</td><td>Manaus</td><td>AM</td><td>AVENIDA CARVALHO LEAL, 1151</td><td>-60.00637</td><td>-3.125646</td><td>1</td></tr>\n",
+       "\t<tr><td>13026002590</td><td>1302603</td><td>CRAS ALVORADA I        </td><td>Rua    </td><td>ABÍLIO ALENCAR  </td><td>S/N </td><td>ALVORADA I        </td><td>69043324</td><td>13</td><td>cras.alvorada1@pmm.am.gov.br        </td><td>9232389505</td><td>01/02/2006</td><td>-30.782.947.658.169.900</td><td>-6.003.666.758.537.290 </td><td>Sim</td><td>Manaus</td><td>AM</td><td>RUA ABÍLIO ALENCAR, S/N    </td><td>-60.03667</td><td>-3.078295</td><td>1</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 6 × 21\n",
+       "\\begin{tabular}{lllllllllllllllllllll}\n",
+       " code\\_cras & code\\_muni & name\\_suas & tp\\_log & logradouro & numero & bairro & cep & code\\_uf & email & telefone & open\\_date & lat\\_suas & lon\\_suas & cad\\_unico & name\\_muni & abrev\\_estado & endereco & lon & lat & check\\\\\n",
+       " <dbl> & <chr> & <chr> & <chr> & <chr> & <chr> & <chr> & <dbl> & <chr> & <chr> & <chr> & <chr> & <chr> & <chr> & <chr> & <chr> & <chr> & <chr> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 13026002569 & 1302603 & CRAS CIDADE NOVA        & Avenida & C, QD 67         & 46   & CIDADE NOVA        & 69097748 & 13 & cras.cidadenova@pmm.am.gov.br        & 9236363849 & 01/06/2004 & -3.013.061.766.867.960  & -59.970.860.481.054.100 & Sim & Manaus & AM & AVENIDA C, QD 67, 46        & -59.97086 & -3.013062 & 1\\\\\n",
+       "\t 13026002579 & 1302603 & CRAS ALFREDO NASCIMENTO & Rua     & 8                & 13   & ALFREDO NASCIMENTO & 69099435 & 13 & cras.alfredonascimento@pmm.am.gov.br & 9236464857 & 01/03/2007 & -3.014.891.255.781.800  & -5.995.288.610.458.370  & Sim & Manaus & AM & RUA 8, 13                   & -59.95289 & -3.014891 & 1\\\\\n",
+       "\t 13026002583 & 1302603 & CRAS BETÂNIA            & Rua     & Sao Lazaro       & 26   & BETÂNIA            & 69073091 & 13 & cras.betania@pmm.am.gov.br           & 9232377678 & 01/09/2005 & -31.327.172.123.425.700 & -59.995.458.126.068.100 & Sim & Manaus & AM & RUA SAO LAZARO, 26          & -59.99546 & -3.132717 & 1\\\\\n",
+       "\t 13026002585 & 1302603 & CRAS Compensa I         & Rua     & Rua da industria & 20   & COMPENSA 1         & 69030070 & 13 & cras.compensa1@pmm.am.gov.br         & 9236714767 & 01/09/2005 & -31.030.530.413.866.400 & -6.005.062.580.108.640  & Sim & Manaus & AM & RUA DA INDUSTRIA, 20        & -60.05063 & -3.103053 & 1\\\\\n",
+       "\t 13026002589 & 1302603 & CRAS CACHOEIRINHA       & Avenida & CARVALHO LEAL    & 1151 & CACHOEIRINHA       & 69065001 & 13 & cras.cachoeirinha@pmm.am.gov.br      & 9236318607 & 27/03/2007 & -3.125.645.770.996.360  & -6.000.636.935.235.090  & Sim & Manaus & AM & AVENIDA CARVALHO LEAL, 1151 & -60.00637 & -3.125646 & 1\\\\\n",
+       "\t 13026002590 & 1302603 & CRAS ALVORADA I         & Rua     & ABÍLIO ALENCAR   & S/N  & ALVORADA I         & 69043324 & 13 & cras.alvorada1@pmm.am.gov.br         & 9232389505 & 01/02/2006 & -30.782.947.658.169.900 & -6.003.666.758.537.290  & Sim & Manaus & AM & RUA ABÍLIO ALENCAR, S/N     & -60.03667 & -3.078295 & 1\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 6 × 21\n",
+       "\n",
+       "| code_cras &lt;dbl&gt; | code_muni &lt;chr&gt; | name_suas &lt;chr&gt; | tp_log &lt;chr&gt; | logradouro &lt;chr&gt; | numero &lt;chr&gt; | bairro &lt;chr&gt; | cep &lt;dbl&gt; | code_uf &lt;chr&gt; | email &lt;chr&gt; | telefone &lt;chr&gt; | open_date &lt;chr&gt; | lat_suas &lt;chr&gt; | lon_suas &lt;chr&gt; | cad_unico &lt;chr&gt; | name_muni &lt;chr&gt; | abrev_estado &lt;chr&gt; | endereco &lt;chr&gt; | lon &lt;dbl&gt; | lat &lt;dbl&gt; | check &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 13026002569 | 1302603 | CRAS CIDADE NOVA        | Avenida | C, QD 67         | 46   | CIDADE NOVA        | 69097748 | 13 | cras.cidadenova@pmm.am.gov.br        | 9236363849 | 01/06/2004 | -3.013.061.766.867.960  | -59.970.860.481.054.100 | Sim | Manaus | AM | AVENIDA C, QD 67, 46        | -59.97086 | -3.013062 | 1 |\n",
+       "| 13026002579 | 1302603 | CRAS ALFREDO NASCIMENTO | Rua     | 8                | 13   | ALFREDO NASCIMENTO | 69099435 | 13 | cras.alfredonascimento@pmm.am.gov.br | 9236464857 | 01/03/2007 | -3.014.891.255.781.800  | -5.995.288.610.458.370  | Sim | Manaus | AM | RUA 8, 13                   | -59.95289 | -3.014891 | 1 |\n",
+       "| 13026002583 | 1302603 | CRAS BETÂNIA            | Rua     | Sao Lazaro       | 26   | BETÂNIA            | 69073091 | 13 | cras.betania@pmm.am.gov.br           | 9232377678 | 01/09/2005 | -31.327.172.123.425.700 | -59.995.458.126.068.100 | Sim | Manaus | AM | RUA SAO LAZARO, 26          | -59.99546 | -3.132717 | 1 |\n",
+       "| 13026002585 | 1302603 | CRAS Compensa I         | Rua     | Rua da industria | 20   | COMPENSA 1         | 69030070 | 13 | cras.compensa1@pmm.am.gov.br         | 9236714767 | 01/09/2005 | -31.030.530.413.866.400 | -6.005.062.580.108.640  | Sim | Manaus | AM | RUA DA INDUSTRIA, 20        | -60.05063 | -3.103053 | 1 |\n",
+       "| 13026002589 | 1302603 | CRAS CACHOEIRINHA       | Avenida | CARVALHO LEAL    | 1151 | CACHOEIRINHA       | 69065001 | 13 | cras.cachoeirinha@pmm.am.gov.br      | 9236318607 | 27/03/2007 | -3.125.645.770.996.360  | -6.000.636.935.235.090  | Sim | Manaus | AM | AVENIDA CARVALHO LEAL, 1151 | -60.00637 | -3.125646 | 1 |\n",
+       "| 13026002590 | 1302603 | CRAS ALVORADA I         | Rua     | ABÍLIO ALENCAR   | S/N  | ALVORADA I         | 69043324 | 13 | cras.alvorada1@pmm.am.gov.br         | 9232389505 | 01/02/2006 | -30.782.947.658.169.900 | -6.003.666.758.537.290  | Sim | Manaus | AM | RUA ABÍLIO ALENCAR, S/N     | -60.03667 | -3.078295 | 1 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  code_cras   code_muni name_suas               tp_log  logradouro       numero\n",
+       "1 13026002569 1302603   CRAS CIDADE NOVA        Avenida C, QD 67         46    \n",
+       "2 13026002579 1302603   CRAS ALFREDO NASCIMENTO Rua     8                13    \n",
+       "3 13026002583 1302603   CRAS BETÂNIA            Rua     Sao Lazaro       26    \n",
+       "4 13026002585 1302603   CRAS Compensa I         Rua     Rua da industria 20    \n",
+       "5 13026002589 1302603   CRAS CACHOEIRINHA       Avenida CARVALHO LEAL    1151  \n",
+       "6 13026002590 1302603   CRAS ALVORADA I         Rua     ABÍLIO ALENCAR   S/N   \n",
+       "  bairro             cep      code_uf email                               \n",
+       "1 CIDADE NOVA        69097748 13      cras.cidadenova@pmm.am.gov.br       \n",
+       "2 ALFREDO NASCIMENTO 69099435 13      cras.alfredonascimento@pmm.am.gov.br\n",
+       "3 BETÂNIA            69073091 13      cras.betania@pmm.am.gov.br          \n",
+       "4 COMPENSA 1         69030070 13      cras.compensa1@pmm.am.gov.br        \n",
+       "5 CACHOEIRINHA       69065001 13      cras.cachoeirinha@pmm.am.gov.br     \n",
+       "6 ALVORADA I         69043324 13      cras.alvorada1@pmm.am.gov.br        \n",
+       "  telefone   open_date  lat_suas                lon_suas               \n",
+       "1 9236363849 01/06/2004 -3.013.061.766.867.960  -59.970.860.481.054.100\n",
+       "2 9236464857 01/03/2007 -3.014.891.255.781.800  -5.995.288.610.458.370 \n",
+       "3 9232377678 01/09/2005 -31.327.172.123.425.700 -59.995.458.126.068.100\n",
+       "4 9236714767 01/09/2005 -31.030.530.413.866.400 -6.005.062.580.108.640 \n",
+       "5 9236318607 27/03/2007 -3.125.645.770.996.360  -6.000.636.935.235.090 \n",
+       "6 9232389505 01/02/2006 -30.782.947.658.169.900 -6.003.666.758.537.290 \n",
+       "  cad_unico name_muni abrev_estado endereco                    lon      \n",
+       "1 Sim       Manaus    AM           AVENIDA C, QD 67, 46        -59.97086\n",
+       "2 Sim       Manaus    AM           RUA 8, 13                   -59.95289\n",
+       "3 Sim       Manaus    AM           RUA SAO LAZARO, 26          -59.99546\n",
+       "4 Sim       Manaus    AM           RUA DA INDUSTRIA, 20        -60.05063\n",
+       "5 Sim       Manaus    AM           AVENIDA CARVALHO LEAL, 1151 -60.00637\n",
+       "6 Sim       Manaus    AM           RUA ABÍLIO ALENCAR, S/N     -60.03667\n",
+       "  lat       check\n",
+       "1 -3.013062 1    \n",
+       "2 -3.014891 1    \n",
+       "3 -3.132717 1    \n",
+       "4 -3.103053 1    \n",
+       "5 -3.125646 1    \n",
+       "6 -3.078295 1    "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 'Setores censitários' são os shapes dos setores cada município,\n",
+    "# com informações sobre limites administrativos\n",
+    "open_file <- '../../../indice-mobilidade_dados/09_cras_assist_social/2019/cras_2019_geocoded.rds'\n",
+    "cras <- read_rds(open_file)\n",
+    "\n",
+    "# # Transforma projeção para WGS84\n",
+    "# set_censitarios <- set_censitarios %>% st_transform(31983) \n",
+    "\n",
+    "dim(cras)\n",
+    "head(cras)"
+   ]
   }
  ],
  "metadata": {
